# canvaskit-question

./: README.md  index.html  package-lock.json  package.json  tsconfig.json
mp3chunks/: Cargo.toml  wasm-pack.sh
mp3chunks/src/: lib.rs
src/: canvaskit.ts  main.ts  mp3.ts  mp3chunk.json
