[package]
name = "mp3chunks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
symphonia = { version = "0.5.4", features = ["mp1", "mp2", "mp3"] }
wasm-bindgen = { version =  "0.2.87", optional = true }

[profile.release]
debug = false
lto = true
codegen-units = 1
opt-level = 's'     # Optimize for size
panic = 'abort'     # About unwinding code
strip = "debuginfo"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[features]
wasm = ["wasm-bindgen"]